--- a/EvidencePojisteni.API/EvidencePojisteni.API.csproj
+++ b/EvidencePojisteni.API/EvidencePojisteni.API.csproj
@@ -8,7 +8,13 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="5.1.0" />
+    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.7" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="9.0.3" />
+    <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="9.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\EvidencePojisteni\EvidencePojisteni.csproj" />
   </ItemGroup>
 
 </Project>
