Add project references and enhance DTOs and entities
Updated project files to include references for API and DTO projects.
Enhanced data structures in DTOs by adding new properties.
Introduced new classes for Contract, Person, and Policy with relevant properties and enumerations to better represent the application's domain model.

--- a/EvidencePojisteni.API/EvidencePojisteni.API.csproj
+++ b/EvidencePojisteni.API/EvidencePojisteni.API.csproj
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\EvidencePojisteniDto\EvidencePojisteniDto.csproj" />
     <ProjectReference Include="..\EvidencePojisteni\EvidencePojisteni.csproj" />
   </ItemGroup>
 
