--- a/EvidencePojisteni.Web/EvidencePojisteni.Web.csproj
+++ b/EvidencePojisteni.Web/EvidencePojisteni.Web.csproj
@@ -12,6 +12,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\EvidencePojisteni.API\EvidencePojisteni.API.csproj" />
+    <ProjectReference Include="..\EvidencePojisteniDto\EvidencePojisteniDto.csproj" />
     <ProjectReference Include="..\EvidencePojisteni\EvidencePojisteni.csproj" />
   </ItemGroup>
 
