--- a/EvidencePojisteniDto/EvidencePojisteniDto.csproj
+++ b/EvidencePojisteniDto/EvidencePojisteniDto.csproj
@@ -41,10 +41,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="EditInsuranceDto.cs" />
-    <Compile Include="InsuranceListDto.cs" />
-    <Compile Include="UpdateInsuranceDto.cs" />
+    <Compile Include="EditContractDto.cs" />
+    <Compile Include="EditPersonDto.cs" />
+    <Compile Include="EditPolicyDto.cs" />
+    <Compile Include="ItemListDto.cs" />
+    <Compile Include="ListItemContractDto.cs" />
+    <Compile Include="ListItemPersonDto.cs" />
+    <Compile Include="ListItemPolicyDto.cs" />
+    <Compile Include="UpdateContractDto.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UpdatePersonDto.cs" />
+    <Compile Include="UpdatePolicyDto.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
