Refactor DTOs and entity structure in controllers
Updated `ContractController` and `PersonController` to use new DTOs (`NewContractDto`, `DetailContractDto`, `NewPersonDto`, `DetailPersonDto`). Refactored `Contract`, `Person`, and `Policy` classes to inherit from a new base class `Entity`, introducing a standardized `Id` property. Removed old DTO classes and updated the project file to reflect these changes. New DTO classes have been defined to align with the updated entity structure.

--- a/EvidencePojisteniDto/EvidencePojisteniDto.csproj
+++ b/EvidencePojisteniDto/EvidencePojisteniDto.csproj
@@ -41,17 +41,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="EditContractDto.cs" />
-    <Compile Include="EditPersonDto.cs" />
-    <Compile Include="EditPolicyDto.cs" />
     <Compile Include="ListItemContractDto.cs" />
     <Compile Include="ListItemPersonDto.cs" />
     <Compile Include="ListItemPolicyDto.cs" />
     <Compile Include="PolicyType.cs" />
-    <Compile Include="UpdateContractDto.cs" />
+    <Compile Include="DetailContractDto.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UpdatePersonDto.cs" />
-    <Compile Include="UpdatePolicyDto.cs" />
+    <Compile Include="DetailPersonDto.cs" />
+    <Compile Include="DetailPolicyDto.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
