--- a/EvidencePojisteni.API/EvidencePojisteni.API.csproj
+++ b/EvidencePojisteni.API/EvidencePojisteni.API.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\EvidencePojisteniDto\EvidencePojisteniDto.csproj" />
+    <ProjectReference Include="..\EvidencePojisteniDtos\EvidencePojisteniDtos.csproj" />
   </ItemGroup>
 
 </Project>
