--- a/EvidencePojisteni.Web/EvidencePojisteni.Web.csproj
+++ b/EvidencePojisteni.Web/EvidencePojisteni.Web.csproj
@@ -12,8 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\EvidencePojisteni.API\EvidencePojisteni.API.csproj" />
-    <ProjectReference Include="..\EvidencePojisteniDto\EvidencePojisteniDto.csproj" />
+    <ProjectReference Include="..\EvidencePojisteniDtos\EvidencePojisteniDtos.csproj" />
   </ItemGroup>
 
 </Project>
