--- a/EvidencePojisteniDto/EvidencePojisteniDto.csproj
+++ b/EvidencePojisteniDto/EvidencePojisteniDto.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{423D9B4C-47B3-4F47-B484-DBD7DCD4CBD9}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>EvidencePojisteniDto</RootNamespace>
-    <AssemblyName>EvidencePojisteniDto</AssemblyName>
+    <RootNamespace>EvidencePojisteniDtoOld</RootNamespace>
+    <AssemblyName>EvidencePojisteniDtoOld</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
