Refactor PersonController and update service registrations
- Changed return type of `Get` method in `PersonController` to `DetailPersonDto`.
- Added `PolicyService` as a singleton and registered `PersonService` as scoped in `Program.cs`.
- Updated `ContractId` initialization in `PersonService` from `List<Guid>` to an array.
- Added project reference to `EvidencePojisteni.API` in `EvidencePojisteni.Web.csproj`.
- Switched from `AddControllers` to `AddControllersWithViews` in `Program.cs` for better request handling.
- Enhanced static assets mapping in `Program.cs` with `.WithStaticAssets()`.
- Removed `app.Run()` to restructure application execution.

--- a/EvidencePojisteni.Web/EvidencePojisteni.Web.csproj
+++ b/EvidencePojisteni.Web/EvidencePojisteni.Web.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\EvidencePojisteni.API\EvidencePojisteni.API.csproj" />
     <ProjectReference Include="..\EvidencePojisteniDtos\EvidencePojisteniDtos.csproj" />
   </ItemGroup>
 
